Adding the Future Work section

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -893,9 +893,6 @@
     "- Pairplot Analysis: The pairplot confirms the findings from the scatter plots and box plots, highlighting the separability of Setosa and the overlap between Versicolor and Virginica.\n",
     "- Feature Importance: Petal length and width are the most important features for distinguishing between species, while sepal width is the least useful.\n",
     "\n",
-    "### Future Work\n",
-    "Advanced Classification: Apply machine learning algorithms (e.g. Random Forest) to classify the species based on the features.\n",
-    "\n",
     "## List of resources\n",
     "1. [Scikit-learn datasets documentation](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html)  \n",
     "2. [Pandas dataframe documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)  \n",
@@ -908,6 +905,21 @@
     "9. [Pandas DataFrame drop](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html)  \n",
     "10. [Coefficient of determination](https://en.wikipedia.org/wiki/Coefficient_of_determination)  \n",
     "11. [Seaborn pairplot documentation](https://seaborn.pydata.org/generated/seaborn.pairplot.html)  \n"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    " ### Future Work\n",
+    "\n",
+    "As a next step, it would be useful to apply methods for predicting the species of flowers.\n",
+    "\n",
+    "For reference, **k-NN** and **Decision Trees** have already shown strong performance in preliminary tests:  \n",
+    "1. [Avuluri Venkatasaireddy’s article on Medium](https://medium.com/@avulurivenkatasaireddy/k-nearest-neighbors-and-implementation-on-iris-data-set-f5817dd33711) demonstrates the use of the k-NN algorithm with Scikit-Learn.  \n",
+    "2. [Wei-Lung Wang’s article on Medium](https://medium.com/@wl8380/understanding-decision-trees-with-the-iris-dataset-6c12d3b1b09d) shows how Decision Trees can be used to classify flowers using simple rules.\n",
+    "\n",
+    "Both methods gave similar accuracy, but Decision Trees have an extra advantage—they're easier to understand, quicker to make predictions, and show exactly how the decision was made in a way that's easy to follow."
    ]
   }
  ],
